Modernize the plugin
Modernize the plugin with updates for JDK 17 and new parent pom/bom versions.